# image-upload-backend

./: Cargo.toml  README_WINDOWS.md
frontend/: index.html
scripts/: package_windows.ps1  package_windows.sh
src/: config.rs  main.rs  main_bak.rs  models.rs  state.rs
src/handlers/: file_handlers.rs  mod.rs  module_handlers.rs  submodule_handlers.rs  system_handlers.rs  upload_handlers.rs
src/services/: cleanup_service.rs  file_service.rs  mod.rs  system_service.rs  upload_service.rs
src/utils/: file_utils.rs  lock_utils.rs  mod.rs  validation_utils.rs
