[package]
name = "image-upload-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4.42"
