[package]
name = "image-upload-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full","rt-multi-thread"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4","serde"] }
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4.42"
flate2 = "1.1.4"
rayon = "1.7"
rand="0.9.2"
lru = "0.7"  # 新增：LRU缓存
regex = "1.10"

scopeguard = "1.2.0"